--- a/gold-admin-frontend/src/app/views/partials/components/user-classification/user-classification.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/user-classification/user-classification.component.html
@@ -79,7 +79,7 @@
                                 <td scope="row" class="rating-title">KYC Rating</td>
                                 <td class="rating-cce">
                                     <select class="form-control" formControlName="kycRatingFromCce"
-                                        (change)="conditionalValidation()"
+                                        (change)="conditionalValidation(); resetKYCStatus()"
                                         [class.isError]="cceControls.kycRatingFromCce.invalid && cceControls.kycRatingFromCce.touched">
                                         <option value="" [disabled]=true [selected]="true"> Select Rating
                                         </option>
