--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/upload-loan-documents/upload-loan-documents.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/upload-loan-documents/upload-loan-documents.component.html
@@ -1,7 +1,15 @@
 <div class="row justify-content-around" [formGroup]="documentsForm">
     <div class="col-11">
+        <div class="row kt-padding-t-15" *ngIf="url == 'loan-transfer'">
+            <div class="col-2 form-label ">
+                <label class="kt-padding-l-10">Outstanding Loan Amount</label>
+            </div>
+            <div class="col-4">
+                <input type="text" formControlName="outstandingLoanAmount" class="form-control " placeholder="Outstanding">
+            </div>
+        </div>
         <div class="row kt-padding-t-15 kt-padding-b-20 justify-content-around">
-            <div class="col-4 form-label" *ngIf="!show">
+            <div class="col-4 form-label" *ngIf="!show">{{show}}
                 <label class="kt-padding-l-10">Loan Agreement Copy</label>
             </div>
             <div class="col-4 form-label">
@@ -74,16 +82,16 @@
                 </div>
             </div>
             <div class="col-4" *ngIf="show">
-                <div class="input-group mb-3" [class.isError]="controls.declarationCopy.touched && controls.declarationCopy.invalid">
+                <div class="input-group mb-3" [class.isError]="controls.declaration.touched && controls.declaration.invalid">
                     <input type="text" class="form-control" placeholder="Select File" aria-label="Recipient's username"
                         aria-describedby="basic-addon2" readonly formControlName="declarationCopyImageName" />
                     <div class="input-group-append">
                         <span class="input-group-text bg kt-pointer font-weight" id="basic-addon2"
-                            (click)="declarationCopy.click()">Attach</span>
+                            (click)="declaration.click()">Attach</span>
                     </div>
-                    <input type="file" class="d-none" accept="image/png, image/jpeg" #declarationCopy
-                        (change)="fileUpload($event,'declarationCopy')">
-                        <mat-error *ngIf="controls.declarationCopy.touched && controls.declarationCopy.invalid">Field Required</mat-error>
+                    <input type="file" class="d-none" accept="image/png, image/jpeg" #declaration
+                        (change)="fileUpload($event,'declaration')">
+                        <mat-error *ngIf="controls.declaration.touched && controls.declaration.invalid">Field Required</mat-error>
 
                 </div>
             </div>
@@ -178,17 +186,17 @@
 
                         <div class="" *ngIf="documentsForm.controls.signedCheque.value">
                             <div class="d-inline-block img-container width kt-margin-r-15">
-                                <img class="fetched-image" [src]="documentsForm.controls.signedCheque.value"
+                                <img class="fetched-image" [src]="documentsForm.controls.signedChequeImage.value"
                                     *ngIf="!pdf.signedCheque"
-                                    (click)="preview(documentsForm.controls.signedCheque.value)">
+                                    (click)="preview(documentsForm.controls.signedChequeImage.value)">
                                 <img src="../../../../../assets/media/icons/edit.svg" alt=""
-                                    class="kt-pointer remove-icon" *ngIf="url != 'view-loan'" (click)="editImages('signedCheque');">
+                                    class="kt-pointer remove-icon" (click)="editImages('signedCheque');">
                                 <!-- <img class="fetched-image" src="../../../../../assets/media/icons/edit.svg"
                                     *ngIf="pdf.signedCheque"
                                     (click)="preview(documentsForm.controls.signedCheque.value)"> -->
                                     <kt-pdf-viewer [page]="1" [showAll]="false" *ngIf="pdf.signedCheque"
-                                    [pdfSrc]="documentsForm.controls.signedCheque.value"
-                                    (click)="preview(documentsForm.controls.signedCheque.value)"></kt-pdf-viewer>   
+                                    [pdfSrc]="documentsForm.controls.signedChequeImage.value"
+                                    (click)="preview(documentsForm.controls.signedChequeImage.value)"></kt-pdf-viewer>   
                             </div>
                         </div>
                     </div>
@@ -198,24 +206,24 @@
             <div class="col" *ngIf="show">
                 <div class="row">
                     <div class="col-10">
-                        <div class="img-container width" *ngIf="!documentsForm.controls.declartionCopy.value">
+                        <div class="img-container width" *ngIf="!documentsForm.controls.declaration.value">
                             <img src="../../../../../../../assets/media/icons/image-placeholder.png"
                                 class="placeholder-image">
                         </div>
 
-                        <div class="" *ngIf="documentsForm.controls.declartionCopy.value">
+                        <div class="" *ngIf="documentsForm.controls.declaration.value">
                             <div class="d-inline-block img-container width kt-margin-r-15">
-                                <img class="fetched-image" [src]="documentsForm.controls.declartionCopy.value"
-                                    *ngIf="!pdf.declartionCopy"
-                                    (click)="preview(documentsForm.controls.declartionCopy.value)">
+                                <img class="fetched-image" [src]="documentsForm.controls.declarationCopyImage.value"
+                                    *ngIf="!pdf.declaration"
+                                    (click)="preview(documentsForm.controls.declarationCopyImage.value)">
                                 <img src="../../../../../assets/media/icons/edit.svg" alt=""
-                                    class="kt-pointer remove-icon" *ngIf="url != 'view-loan'" (click)="editImages('declartionCopy');">
-                                    <kt-pdf-viewer [page]="1" [showAll]="false" *ngIf="pdf.declartionCopy"
-                                    [pdfSrc]="documentsForm.controls.declartionCopy.value"
-                                    (click)="preview(documentsForm.controls.declartionCopy.value)"></kt-pdf-viewer> 
+                                    class="kt-pointer remove-icon" *ngIf="url != 'view-loan'" (click)="editImages('declaration');">
+                                    <kt-pdf-viewer [page]="1" [showAll]="false" *ngIf="pdf.declaration"
+                                    [pdfSrc]="documentsForm.controls.declarationCopyImage.value"
+                                    (click)="preview(documentsForm.controls.declarationCopyImage.value)"></kt-pdf-viewer> 
                                 <!-- <img class="fetched-image" src="../../../../../assets/media/icons/edit.svg"
-                                    *ngIf="pdf.declartionCopy"
-                                    (click)="preview(documentsForm.controls.declartionCopy.value)"> -->
+                                    *ngIf="pdf.declaration"
+                                    (click)="preview(documentsForm.controls.declaration.value)"> -->
                             </div>
                         </div>
                     </div>
