--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer/loan-transfer.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-transfer/loan-transfer.component.html
@@ -4,7 +4,7 @@
             <div class="col-12">
                 <mat-tab-group [(selectedIndex)]="selected" (selectedTabChange)="next($event)">
                     <mat-tab label="Basic Details">
-                        <kt-basic-details (id)="loan($event)" (apiHit)="editId($event)" [details]="customerDetail"
+                        <kt-basic-details (id)="loan($event)" (apiHit)="getSingleDetails($event)" [details]="customerDetail"
                         (next)="next($event)"></kt-basic-details>
                     </mat-tab>
                     <mat-tab label="Upload Documents">
