--- a/gold-admin-frontend/src/app/views/pages/admin/customer-management/customer-details/customer-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/customer-management/customer-details/customer-details.component.html
@@ -5,7 +5,7 @@
                 <div class="col">
                     <div class="row">
                         <div class="col-1">
-                            <img class="kt-margin-t-10 profile" [src]="cutomerDetails.customerKycPersonal.profileImage">
+                            <img class="kt-margin-t-10 profile" [src]="cutomerDetails.customerKycPersonal.profileImg">
                             <!-- <img [src]="customer.image" *ngIf="customer.image != '' || customer.image != null"> -->
                         </div>
                         <div class="col kt-padding-l-25">
