--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/applied-loan/applied-loan.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/applied-loan/applied-loan.component.scss
@@ -36,6 +36,9 @@
     .mat-column-bMApproval{ 
         flex: 0 0 9% !important;        
     }
+    .mat-column-oTApproval{ 
+        flex: 0 0 9% !important;        
+    }
     .mat-column-view{ 
         flex: 0 0 5% !important;        
     }
