minor bug fixes

--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/bank-details/bank-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/bank-details/bank-details.component.html
@@ -114,8 +114,8 @@
                                     Required field
                                 </mat-error>
                                 <mat-error
-                                    *ngIf="controls.accountNumber.errors?.minlength && controls.accountNumber.touched">
-                                    'Minimum 9 or maximum 18 digits required"
+                                    *ngIf="controls.accountNumber.errors?.pattern && controls.accountNumber.touched">
+                                    <small>Invalid Input</small>
                                 </mat-error>
                             </div>
                         </div>
