Fixed dimensions changes

--- a/gold-admin-frontend/src/app/views/pages/admin/emi-management/product/upload-design/upload-design.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/emi-management/product/upload-design/upload-design.component.html
@@ -33,7 +33,7 @@
                 <div class="col-8 offset-3 text-left">
                     <p class="font-weight-500">Design image parameters guideline for upload images:</p>
                     <div>Size of image - Maximum 200 KB</div>
-                    <p>Image dimensions - 1500 pixels x 1500 pixels</p>
+                    <p>Image dimensions - Maximum 1500 pixels x 1500 pixels</p>
                 </div>
 
                 <p><span class="font-weight-500">Note:</span> The design name must be as per the SKUCODE of products,
