bug fixe and packet remove

--- a/gold-admin-frontend/src/app/views/pages/admin/customer-management/customer-grid/customer-grid.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/customer-management/customer-grid/customer-grid.component.html
@@ -1,7 +1,7 @@
 <div class="row card-container">
     <div class="card" *ngFor="let customer of customers;index as i">
         <div class="bg-white">
-            <img [src]="customer.customerKycPersonal.profileImage" alt="test ">
+            <img [src]="customer.customerKycPersonal.profileImg" alt="test ">
             <p class="text-color customer-id">{{customer.customerUniqueId}}</p>
             <p class="text-secondary">{{customer.panCardNumber}}</p>
             <p class="text-color font-weight-bold">{{customer.firstName | titlecase}} {{customer.lastName | titlecase}}
