--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/upload-packets/upload-packets.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/upload-packets/upload-packets.component.html
@@ -61,7 +61,7 @@
                             </td>
                             <td class="text-gray" *ngIf="url != 'view-loan'">
                                 <img src="../../../../../../../assets/media/icons/cancel.png" alt="" height="15"
-                                    (click)="removePacketsData(idx)">
+                                    (click)="removeSelectedPacketsData(idx)">
                             </td>
                         </ng-container>
                     </tr>
