--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/upload-loan-documents/upload-loan-documents.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/upload-loan-documents/upload-loan-documents.component.html
@@ -9,7 +9,7 @@
             </div>
         </div>
         <div class="row kt-padding-t-15 kt-padding-b-20 justify-content-around">
-            <div class="col-4 form-label" *ngIf="!show">{{show}}
+            <div class="col-4 form-label" *ngIf="!show">
                 <label class="kt-padding-l-10">Loan Agreement Copy</label>
             </div>
             <div class="col-4 form-label">
