bhushan::appraiser time validation

--- a/gold-admin-frontend/src/app/views/pages/admin/user-management/assign-appraiser/assign-appraiser/assign-appraiser.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/user-management/assign-appraiser/assign-appraiser/assign-appraiser.component.html
@@ -77,7 +77,8 @@
                                 <input type="text" class="form-control" [matDatepicker]="picker" (click)="picker.open()"
                                     formControlName="appoinmentDate"
                                     [class.isError]="controls.appoinmentDate.touched && controls.appoinmentDate.invalid"
-                                    readonly placeholder="4/5/2020" [min]="currentDate">
+                                    readonly placeholder="4/5/2020" [min]="currentDate"
+                                    (dateChange)="setMinimumStartTime($event)">
                                 <mat-datepicker #picker></mat-datepicker>
                             </div>
                         </div>
@@ -89,12 +90,12 @@
                             <div class="col-4">
                                 <input [ngxTimepicker]="picker1" class="form-control" formControlName="startTime"
                                     placeholder="From" [min]="addStartTime">
-                                <ngx-material-timepicker #picker1>
+                                <ngx-material-timepicker #picker1 (timeChanged)="setStartTime($event)">
                                 </ngx-material-timepicker>
                             </div>
                             <div class="col-4">
                                 <input [ngxTimepicker]="picker2" class="form-control" formControlName="endTime"
-                                    placeholder="To" [min]="addStartTime">
+                                    placeholder="To" [min]="data.action == 'add'? startTime : null">
                                 <ngx-material-timepicker #picker2></ngx-material-timepicker>
                             </div>
                         </div>
