--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/loan-application-form.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/loan-application-form.component.html
@@ -22,7 +22,7 @@
                         <div class="mat-tab-body-content ng-trigger ng-trigger-translateTab p-0"
                             style="padding:0px !important">
                             <kt-ornaments [action]="action" (next)="next($event)" [disable]="disabledForm"
-                                [details]="customerDetail" (totalAmt)="total($event)"
+                                [details]="customerDetail" (totalAmt)="total($event)" (fullAmt)="fullAmt($event)"
                                 [masterAndLoanIds]="masterAndLoanIds" [ornamentType]="ornamentType">
                             </kt-ornaments>
                         </div>
@@ -30,7 +30,7 @@
                     </mat-tab>
                     <mat-tab label="Final Interest Calculator" [disabled]="disabled[3]">
                         <kt-interest-calculator (next)="next($event)" [disable]="disabledForm" [action]="action"
-                            (finalLoanAmount)="finalLoanAmount($event)" [totalAmt]="totalAmount"
+                            (finalLoanAmount)="finalLoanAmount($event)" [totalAmt]="totalAmount" [fullAmount]="fullAmount"
                             [details]="customerDetail" [masterAndLoanIds]="masterAndLoanIds"></kt-interest-calculator>
                     </mat-tab>
                     <mat-tab label="Bank Details" [disabled]="disabled[4]">
